--- a/src/styles/profile_pics.css
+++ b/src/styles/profile_pics.css
@@ -6,8 +6,9 @@
 }
 
 .image-group {
-    width: 150px;
-    height: 200px;
+    height: 30vh;
+    width: 60%;
+    margin-top: 2%;
 
 }
 
