--- a/src/styles/sugerences-div.css
+++ b/src/styles/sugerences-div.css
@@ -37,3 +37,13 @@
 .sugerences-banner h1{
     background-color:  rgba(134, 0, 134, 0.795);
 }
+label{
+    display: inline-block;
+    margin-top: 3%;
+    font-weight: bold;
+}
+#feels{
+    border: 1px solid;
+    background:  rgba(134, 0, 134, 0.795);
+    width: fit-content;
+}
